# rs-ffmpeg-wrapper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
test/: format_test.sh  test.py  test.sh
