[package]
name = "rust-multithreading-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
num_cpus = "1.16.0"
process_path = "0.1.4"
sysinfo = "0.30.5"
