[package]
name = "rs-ffmpeg-wrapper"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
iced = { version = "0.13.1", features = ["image", "svg"] }
iced_aw = "0.11.0"
num_cpus = "1.16.0"
